--- a/readme.adoc
+++ b/readme.adoc
@@ -1,5 +1,7 @@
 = json-randomizer
 
+image:https://travis-ci.org/damianmcdonald/json-randomizer.svg?branch=master["Build Status", link="https://travis-ci.org/damianmcdonald/json-randomizer"]
+
 `json-randomizer` is a http://www.scala-lang.org/[Scala] library that generates random values for structured JSON.
 
 It is intended to be used to performance and load test JSON web services. In a few shorts steps you can define your JSON structure and then fire thousands of unique JSON requests at your API.
